# ems_gt6858_temp

./: .gitignore  API_SWITCH_GUIDE.md  CMakeLists.txt  CMakeListsArm.txt  CMakeListsUbuntu.txt  app.py  asgi.py  config.py  database_sqlalchemy.py  generate_modbus_protocol_xlsx.py  generate_mqtt_protocol_xlsx.py  logger.py  monitor_ems.py  mqtt_init.json  mqtt_service.py  requirements.txt
cfg/: bms_uhome_protocol.json  control_command.json  ems_configure_param.json  ems_data_dict.json  ems_tcp_cmd.json  mqtt_cmd.json  mqtt_cmd_mapping.json  temp.json
include/control/: command.h  frontendcontroller.h  mqttcontroller.h  qtcontroller.h  strategy.h
include/devices/: acmeter_3366.h  bms_uhome.h  dcdc.h  dehumidifier_v2.h  device.h  devicemanager.h  ems.h  gt_bms.h  increase_charger.h  infy_charger.h  iomodule.h  pcs.h  pcs_15am.h  seemor_cooler.h  wea1610.h
include/settings/: config.h
include/utils/: canoperator.h  log.h  modbusclient.h  modbuspassthrough.h  modbusserver.h  sqlcpp.h  sqldatabase.h  unixsocketserver.h  utils.h
protocol/: AC_hengdu_protocol_V1.3.xml  DJSF2699_protocol.xml  DTSD3366D_protocol.xml  EPCS15-AM_protocol_V.3.0.xml  HGM6100N_protocol.xml  WEA1610_protocol.xml  dehumidifier_protocol.xml  dehumidifier_protocol_V2.xml  ejDCDC_protocol_V1.7.xml  ejDCDC_protocol_V2.2.xlsx  ejDCDC_protocol_V2.2.xml  ejPCS_protocol_V.1.11.xml  ejPCS_protocol_V.1.24.xml  ems_dido.xml  fire_alarm_protocol.xml  gtBMS_485_protocol_V1.16.xml  gtBMS_485_protocol_V1.18.xml  gtBMS_485_protocol_V1.5.xml  gtBMS_protocol.xml  hydrogen_sensor_protocol.xml  increaseCharger_protocol.xml  infyCharger_protocol_V108.xml  kndIO2080_protocol.xml  kndIO4040_protocol.xml  liquid_cooler_protocol.xml  sanhua_cooler_protocol.xml  smoke_sensor_protocol.xml  uhomeBMS_protocol_v1.xml  zhongsheng_8di8do_protocol.xml
scripts/: test_passthrough.sh  test_passthrough_complete.py
src/: main.cpp
src/control/: ac_wea1610cmd.cpp  dehumifierv2cmd.cpp  ejdcdc.cpp  ejpcs15amcmd.cpp  ejpcscmd.cpp  emscmd.cpp  frontendcontroller.cpp  gtbmscmd.cpp  hgm6100cmd.cpp  iomodulecmd.cpp  mqttcontroller.cpp  qtcontroller.cpp  strategy.cpp  xmcooler.cpp
src/devices/: ac_hengdu.cpp  acmeter_3366.cpp  bms_uhome.cpp  dcdc.cpp  dehumidifier_v2.cpp  device.cpp  devicemanager.cpp  dg_hgm6100.cpp  ems.cpp  gt_bms.cpp  increase_charger.cpp  infy_charger.cpp  iomodule.cpp  pcs.cpp  pcs_15am.cpp  seemor_cooler.cpp  wea1610.cpp
src/examples/: device_database_example.cpp  modbus_passthrough_demo.cpp  modbus_passthrough_production.cpp  sqlcpp_example.cpp  sqldatabase_example.cpp
src/utils/: canoperator.cpp  log.cpp  modbusclient.cpp  modbuspassthrough.cpp  modbusserver.cpp  sqlcpp.cpp  sqldatabase.cpp  unixsocketserver.cpp  utils.cpp
